<resources>
    <string name="banner_portfolio">ca-app-pub-3909765981983100/8827874069</string>
    <string name="name">Ваше имя</string>
    <string name="sort">Сортировка</string>
    <string name="your_capital">Ваш капитал</string>
    <string name="pif">Паевые фонды</string>
    <string name="app_name">ПИФы</string>
    <string name="authorization">Авторизация</string>
    <string name="portfolio">Портфель</string>
    <string name="analitycs">Аналитика</string>
    <string name="operations">Операции</string>
    <string name="autorization">Авторизация</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="logout">Выход</string>
    <string name="title_activity_add">Операции с паями</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="title_activity_protfolio_pif_info">protfolioPifInfo</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_filterpif">filterpif</string>

    <string name="title_activity_registration">Registration</string>
    <string name="name_pif">Название фонда</string>
    <string name="uk">Управляющая</string>
    <string name="hint_uk">Введите название УК</string>
    <string name="date_pay">Дата приобретения</string>
    <string name="amount_pay">Количество паев</string>
    <string name="pif_info">Информация о фонде</string>
    <string name="investing_info">Информация о сумме инвестиций</string>
    <string name="null_amount" />
    <string name="you_capital">Ваш капитал</string>
    <string name="investing">Инвестированно</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_uklist">UKlist</string>
</resources>
