<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="1dp"
    android:elevation="0dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_pif_list_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:elevation="0dp"
        android:longClickable="false"
        android:padding="8dp"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:paddingBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/titlePortfolio"
                    tools:layout_editor_absoluteX="8dp">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="+0,65%"
                            android:textSize="14sp"
                            app:layout_constraintStart_toStartOf="@+id/izm_day"
                            app:layout_constraintTop_toBottomOf="@+id/izm_day" />

                        <TextView
                            android:id="@+id/textView32"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:text="За день"
                            app:layout_constraintStart_toStartOf="@+id/pay_price"
                            app:layout_constraintTop_toBottomOf="@+id/pay_price" />

                        <TextView
                            android:id="@+id/textView37"
                            android:layout_width="wrap_content"
                            android:layout_height="19dp"
                            android:fontFamily="sans-serif-light"
                            android:text="Всего"
                            app:layout_constraintStart_toStartOf="@+id/textView32"
                            app:layout_constraintTop_toBottomOf="@+id/textView32" />

                        <TextView
                            android:id="@+id/izm_day"
                            android:layout_width="wrap_content"
                            android:layout_height="22dp"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="TextView"
                            android:textSize="14sp"
                            app:layout_constraintStart_toEndOf="@+id/textView32"
                            app:layout_constraintTop_toBottomOf="@+id/pay_price" />
                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5">

                        <TextView
                            android:id="@+id/pay_price"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-thin"
                            android:text="6145"
                            android:textSize="24sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </android.support.constraint.ConstraintLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/uk"
                    android:textSize="16sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="19.07.2018"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/titlePortfolio"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/name_pif"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:typeface="monospace"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_portfolio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_portfolio"></com.google.android.gms.ads.AdView>
</LinearLayout>